Added some links

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 																<table class="center" border="0" cellspacing="0" cellpadding="0">
 																	<tr>
 																		<td class="text-top" style="color:#000000; font-family:Arial,sans-serif, 'Muli'; font-size:11px; line-height:16px; text-align:left" width="17">+</td>
-																		<td class="text-top2" style="color:#000000; font-family:Georgia, serif, 'Merriweather'; font-size:11px; line-height:16px; text-align:right">Bu mesajı düzgün görüntüleyemiyorsanız lütfen <a href="http://www.picksoft.com.tr" target="_blank" class="link-black-u" style="color:#000001; text-decoration:underline"><span class="link-black-u" style="color:#000001; text-decoration:underline">tıklayınız.</span></a></td>
+																		<td class="text-top2" style="color:#000000; font-family:Georgia, serif, 'Merriweather'; font-size:11px; line-height:16px; text-align:right">Bu mesajı düzgün görüntüleyemiyorsanız lütfen <a href="https://ylmrdm.github.io/mail-template/" target="_blank" class="link-black-u" style="color:#000001; text-decoration:underline"><span class="link-black-u" style="color:#000001; text-decoration:underline">tıklayınız.</span></a></td>
 																	</tr>
 																</table>
 															</td>
