--- a/main.html
+++ b/main.html
@@ -210,7 +210,7 @@
 																	<tr>
 																		<td class="content-spacing" width="30"></td>
 																		<td style="padding-top: 30px;">
-																			<div class="img" style="font-size:0pt; line-height:0pt; text-align:left"><div class="img-m-center" style="font-size:0pt; line-height:0pt"><a href="#" target="_blank"><img src="images/logo.png" border="0" width="101" height="27	" alt="" /></a></div></div>
+																			<div class="img" style="font-size:0pt; line-height:0pt; text-align:left"><div class="img-m-center" style="font-size:0pt; line-height:0pt"><a href="#" target="_blank"><img src="images/logo.png" border="0" width="101" height="27	" alt="picksoft" /></a></div></div>
 																			<table width="100%" border="0" cellspacing="0" cellpadding="0">
 																				<tr>
 																					<td height="50" class="m-td" style="font-size:0pt; line-height:0pt; text-align:left"></td>
@@ -312,7 +312,7 @@
 												<th class="column-top" style="font-size:0pt; line-height:0pt; padding:0; margin:0; font-weight:normal; vertical-align:top; Margin:0" width="172">
 													<table width="100%" border="0" cellspacing="0" cellpadding="0">
 														<tr>
-															<td class="img" style="font-size:0pt; line-height:0pt; text-align:left"><div class="img-m-center" style="font-size:0pt; line-height:0pt"><a href="#" target="_blank"><img src="images/footer_logo.png" border="0" width="172" height="46" alt="" /></a></div></td>
+															<td class="img" style="font-size:0pt; line-height:0pt; text-align:left"><div class="img-m-center" style="font-size:0pt; line-height:0pt"><a href="#" target="_blank"><img src="images/footer_logo.png" border="0" width="172" height="46" alt="picksoft" /></a></div></td>
 														</tr>
 													</table>
 												</th>
@@ -331,8 +331,17 @@
 																			<span class="mobile-block"><span class="hide-for-mobile"> &nbsp; | &nbsp; </span></span>
 																		</td>
 																		
-																		<td class="img" style="font-size:0pt; line-height:0pt; text-align:left" width="32"><a href="#" target="_blank"><img src="images/ico_pinterest.jpg" border="0" width="16" height="14" alt="" /></a></td>
-																		<td class="img" style="font-size:0pt; line-height:0pt; text-align:left" width="16"><a href="#" target="_blank"><img src="images/ico_instagram.jpg" border="0" width="16" height="14" alt="" /></a></td>
+																		<td class="img" style="font-size:0pt; line-height:0pt; text-align:left" width="32">
+																			<a href="https://www.linkedin.com/company/picksoft-bilisim/" target="_blank">
+																				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="14" viewBox="0 5 1036 990">
+																					<path d="M0 120c0-33.334 11.667-60.834 35-82.5C58.333 15.833 88.667 5 126 5c36.667 0 66.333 10.666 89 32 23.333 22 35 50.666 35 86 0 32-11.333 58.666-34 80-23.333 22-54 33-92 33h-1c-36.667 0-66.333-11-89-33S0 153.333 0 120zm13 875V327h222v668H13zm345 0h222V622c0-23.334 2.667-41.334 8-54 9.333-22.667 23.5-41.834 42.5-57.5 19-15.667 42.833-23.5 71.5-23.5 74.667 0 112 50.333 112 151v357h222V612c0-98.667-23.333-173.5-70-224.5S857.667 311 781 311c-86 0-153 37-201 111v2h-1l1-2v-95H358c1.333 21.333 2 87.666 2 199 0 111.333-.667 267.666-2 469z"/>
+																				</svg>
+																			</a>
+																		</td>
+																		<td class="img" style="font-size:0pt; line-height:0pt; text-align:left" width="16">
+																			<a href="https://www.instagram.com/picksoft/" target="_blank"><img src="images/ico_instagram.jpg" border="0" width="16" height="14" alt="instagram" />
+																			</a>
+																		</td>
 																	</tr>
 																</table>
 															</td>
